Estilização do menu e botões

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src\styles\styles.css">
     <link rel="stylesheet" href="src\styles\header.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Landing Page</title>
 </head>
 
@@ -17,13 +17,13 @@
         <nav id="navbar">
             <i class="fa-solid fa-ghost" id="nav_logo">ghost</i>
             <ul id="nav_list">
-                <li id="nav_item">
+                <li class="nav-item active">
                     <a href="#home">Início</a>
                 </li>
-                <li id="nav_item">
+                <li class="nav-item">
                     <a href="#menu">Catálogo</a>
                 </li>
-                <li id="nav_item">
+                <li class="nav-item">
                     <a href="#reviews">Avaliações</a>
                 </li>
             </ul>
@@ -38,13 +38,13 @@
         </nav>
         <div id="mobile_menu">
             <ul id="mobile_nav_list">
-                <li id="nav_item">
+                <li class="nav-item">
                     <a href="#home">Início</a>
                 </li>
-                <li id="nav_item">
+                <li class="nav-item">
                     <a href="#menu">Catálogo</a>
                 </li>
-                <li id="nav_item">
+                <li class="nav-item">
                     <a href="#reviews">Avaliações</a>
                 </li>
             </ul>
